@@ -53,6 +53,7 @@
 <h2>Examples</h2>
 <ul class="nowrap">
   <li><a href="../examples/getopt.build.lua.html">getopt.build.lua</a></li>
+  <li><a href="../examples/getopt.process.lua.html">getopt.process.lua</a></li>
 </ul>
 
 </div>
@@ -114,7 +115,7 @@
 </div> <!-- id="main" -->
 <div id="about">
 <i>generated by <a href="http://github.com/stevedonovan/LDoc">LDoc 1.4.6</a></i>
-<i style="float:right;">Last updated 2022-12-18 18:33:02 </i>
+<i style="float:right;">Last updated 2023-01-31 20:22:27 </i>
 </div> <!-- id="about" -->
 </div> <!-- id="container" -->
 </body>
