@@ -54,6 +54,7 @@
 <h2>Examples</h2>
 <ul class="nowrap">
   <li><a href="../examples/getopt.build.lua.html">getopt.build.lua</a></li>
+  <li><a href="../examples/getopt.process.lua.html">getopt.process.lua</a></li>
 </ul>
 
 </div>
@@ -74,6 +75,10 @@
 	<tr>
 	<td class="name" nowrap><a href="#build">build (supported)</a></td>
 	<td class="summary">Build a set of options and usage information.</td>
+	</tr>
+	<tr>
+	<td class="name" nowrap><a href="#process">process (parameters)</a></td>
+	<td class="summary">Process options more easily.</td>
 	</tr>
 </table>
 <h2><a href="#Tables">Tables</a></h2>
@@ -166,6 +171,41 @@
 
 
 </dd>
+    <dt>
+    <a name = "process"></a>
+    <strong>process (parameters)</strong>
+    </dt>
+    <dd>
+    Process options more easily.
+ Effectively <a href="../libraries/getopt.html#build">build</a> and <a href="../libraries/getopt.html#">getopt</a> combined.
+ For example usage, see <a href="../examples/getopt.process.lua.html#">getopt.process.lua</a>.
+
+
+    <h3>Parameters:</h3>
+    <ul>
+        <li><span class="parameter">parameters</span>
+            <span class="types"><a class="type" href="https://www.lua.org/manual/5.1/manual.html#5.5">table</a></span>
+         An amalgamation of the arguments given to <a href="../libraries/getopt.html#build">build</a> and <a href="../libraries/getopt.html#">getopt</a>, with the addition of an <code>args</code> field to hold the raw arguments.
+        </li>
+    </ul>
+
+    <h3>Returns:</h3>
+    <ol>
+        <li>
+           <span class="types"><a class="type" href="https://www.lua.org/manual/5.1/manual.html#5.5">table</a></span>
+        The arguments left over</li>
+        <li>
+           <span class="types"><a class="type" href="https://www.lua.org/manual/5.1/manual.html#5.5">table</a></span>
+        The options left over</li>
+        <li>
+           <span class="types"><a class="type" href="https://www.lua.org/manual/5.1/manual.html#5.4">string</a></span>
+        Usage information for the given options.</li>
+    </ol>
+
+
+
+
+</dd>
 </dl>
     <h2 class="section-header "><a name="Tables"></a>Tables</h2>
 
@@ -248,7 +288,7 @@
 </div> <!-- id="main" -->
 <div id="about">
 <i>generated by <a href="http://github.com/stevedonovan/LDoc">LDoc 1.4.6</a></i>
-<i style="float:right;">Last updated 2022-12-18 18:33:02 </i>
+<i style="float:right;">Last updated 2023-01-31 20:22:27 </i>
 </div> <!-- id="about" -->
 </div> <!-- id="container" -->
 </body>
